examples/type_system/failing/42_handle_unknown_effect.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E405: handling an undeclared effect should fail statically.

fn main() -> Unit with IO {
    let _ = 1 handle Console {
        print(resume, _msg) -> resume(())
    };
    print("done")
}
